# divp

./: .ccls  .clang-format  .clang-tidy  CMakeLists.txt  sql.py
include/divp/: akt.hpp  dateUtils.hpp  fileUtils.hpp  name.hpp  nameFileProcessor.hpp  sector.hpp  strUtils.hpp  transaction.hpp  vectorAndMapUtils.hpp
src/: akt.cpp  aktFileProcessor.cpp  dateUtils.cpp  fileUtils.cpp  main.cpp  name.cpp  nameFileProcessor.cpp  sector.cpp  strUtils.cpp  transaction.cpp  vectorAndMapUtils.cpp
